# bazel_example

./: BUILD  MODULE.bazel  README.md  WORKSPACE
src/: core.cc  core.h  example.cc  parse_urdf.cc  parse_urdf.cpp
