###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# Abseil.
bazel_dep(name = "abseil-cpp", version = "20230802.0")

# Eigen.
bazel_dep(name = "eigen", version = "3.4.0")

# rules_foreign_cc, to build cmake projects within bazel.
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# urdfdom.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
_all_content = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""
http_archive(
    name = "urdfdom",
    build_file_content = _all_content,
    strip_prefix = "urdfdom-3.0.0",
    url = "https://github.com/ros/urdfdom/archive/refs/tags/3.0.0.zip",
)
